--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "estree-walk-plus",
-  "version": "0.0.1-alpha.2",
+  "version": "0.0.1-alpha.4",
   "description": "",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -18,7 +18,7 @@
     "build:node": "esbuild ./src/index.ts --bundle --outfile=./build/index.js --platform=node --format=cjs",
     "build:types": "tsc --emitDeclarationOnly --declaration --outDir ./build",
     "build": "npm run build:ts && npm run build:node && npm run build:types",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "acorn": "^8.12.1"
