--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "estree-walk-plus",
-  "version": "0.0.1-alpha.4",
+  "version": "0.0.1",
   "description": "",
   "main": "build/index.js",
   "types": "build/index.d.ts",
